--- a/incident-report.html
+++ b/incident-report.html
@@ -561,17 +561,32 @@ img {
 
       <!-- Categories -->
       <fieldset id="categoryFieldset" class="mb-4" required>
-        <legend class="font-medium text-gray-700 mb-2">Category (select one):</legend>
-        <div class="flex flex-wrap gap-3">
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="BVS" required class="mr-1"> BVS</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="Network" class="mr-1"> Network / Service</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="Portal" class="mr-1"> System / Portal</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="Weather" class="mr-1"> Weather / Rain / Flood</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="PowerOutage" class="mr-1"> Power Outage</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="LawandOrder" class="mr-1"> Law & Order / Strikes</label>
-          <label class="inline-flex items-center"><input type="radio" name="entry.1980764601" value="Other" class="mr-1"> Other</label>
-        </div>
-      </fieldset>
+  <legend class="font-medium text-gray-700 mb-2">Category (select one):</legend>
+  <div class="flex flex-wrap gap-3">
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="BVS" required class="mr-1"> BVS
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="Network" class="mr-1"> Network / Service
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="Portal" class="mr-1"> System / Portal
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="Weather" class="mr-1"> Weather / Rain / Flood
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="PowerOutage" class="mr-1"> Power Outage
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="LawandOrder" class="mr-1"> Law & Order / Strikes
+    </label>
+    <label class="inline-flex items-center">
+      <input type="radio" name="entry.1980764601" value="Other" class="mr-1"> Other
+    </label>
+  </div>
+</fieldset>
+
 
       <!-- Date and Time Section -->
       <div class="mb-4 grid grid-cols-1 sm:grid-cols-3 gap-4">
@@ -1139,6 +1154,7 @@ reportBtn.addEventListener("click", openModal);
 </body>
 
 </html>
+
 
 
 
