--- a/index.html
+++ b/index.html
@@ -113,7 +113,35 @@
 
   <script>
     const whitelist = [
-      { username: "sameenyaser", password: "1234" }
+      { username: "sameenyaser", password: "Zong@1234" },
+      { username: "muhammadyasir", password: "Zong@1234" },
+      { username: "sajjadahmed", password: "Zong@1234" },
+      { username: "syednaumanzaheer", password: "Zong@1234" },
+      { username: "muhammadfaheembutt", password: "Zong@1234" },
+      { username: "kamranali", password: "Zong@1234" },
+      { username: "haroonashar", password: "Zong@1234" },
+      { username: "naveedbari", password: "Zong@1234" },
+      { username: "muhammadsaleem", password: "Zong@1234" },
+      { username: "muhammadasif", password: "Zong@1234" },
+      { username: "mohammadjamil", password: "Zong@1234" },
+      { username: "hamidmunirbutt", password: "Zong@1234" },
+      { username: "muhammadusman", password: "Zong@1234" },
+      { username: "khwajasherazsharif", password: "Zong@1234" },
+      { username: "kashifkhalid", password: "Zong@1234" },
+      { username: "muhammadsaeedakhtar", password: "Zong@1234" },
+      { username: "arshedmahmood", password: "Zong@1234" },
+      { username: "moeedarifdar", password: "Zong@1234" },
+      { username: "amirhameedbutt", password: "Zong@1234" },
+      { username: "waseemullah", password: "Zong@1234" },
+      { username: "muhammadabbas", password: "Zong@1234" },
+      { username: "ranaghulammuhammad", password: "Zong@1234" },
+      { username: "hamzabutt", password: "Zong@1234" },
+      { username: "uzairasif", password: "Zong@1234" },
+      { username: "khadimhussain", password: "Zong@1234" },
+      { username: "umairarshad", password: "Zong@1234" },
+      { username: "hassaanyounas", password: "Zong@1234" },
+      { username: "muhammadahmedraza", password: "Zong@1234" },
+      { username: "atifiqbal", password: "Zong@1234" }
     ];
 
     function login() {
@@ -137,3 +165,4 @@
 
 </body>
 </html>
+
