--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
       { username: "umairarshad", password: "Zong@1234" },
       { username: "hassaanyounas", password: "Zong@1234" },
       { username: "muhammadahmedraza", password: "Zong@1234" },
-      { username: "atifiqbal", password: "Zong@1234" }
+      { username: "atifiqbal", password: "Zong@1234" },
+      { username: "usmanalibutt", password: "Zong@1234" },
+      { username: "farrukhejaz", password: "Zong@1234" },
+      { username: "abdulsalam", password: "Zong@1234" },
+      { username: "muhammadshoaibchohan", password: "Zong@1234" }
     ];
 
     function login() {
@@ -165,4 +169,5 @@
 
 </body>
 </html>
+
 
