--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 { username: "alimakki", password: "Zong@1234" },
 { username: "tauseefhassan", password: "Zong@1234" },
 { username: "abdulrehman", password: "Zong@1234" },
-      { username: "muhammadasim", password: "Zong@1234" }
-      
+      { username: "muhammadasim", password: "Zong@1234" },
+      { username: "aurangzebkhan", password: "Zong@1234" }
     ];
 
     function login() {
@@ -271,6 +271,7 @@
 
 </body>
 </html>
+
 
 
 
