--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
 { username: "tauseefhassan", password: "Zong@1234" },
 { username: "abdulrehman", password: "Zong@1234" },
       { username: "muhammadasim", password: "Zong@1234" },
-      { username: "aurangzebkhan", password: "Zong@1234" }
+      { username: "aurangzebkhan", password: "Zong@1234" },
+      { username: "usmannasir", password: "Zong@1234" }
     ];
 
     function login() {
@@ -339,6 +340,7 @@
 
 </body>
 </html>
+
 
 
 
